# move-fcg-analyzer

./: .gitignore  BUILD.md  BUILD_LINUX.md  BUILD_MACOS.md  Cargo.toml  Dockerfile.build  MANIFEST.in  QUICKSTART.md  README.md  binding.gyp  build_linux.sh  build_macos.sh  go.mod  package-lock.json  package.json  prepare_package.sh  pyproject-linux.toml  pyproject-macos.toml  pyproject.toml  requirements.txt  setup.py  setup_python.py  test-move.py  test.py  test_example.py  tsconfig.json  verify_installation.py
.github/workflows/: build-wheels.yml  node-prebuild.yml  publish-to-pypi.yml  publish.yml  test-build.yml
aptos_move_analyzer/: __init__.py  __main__.py  analyzer.py  call_extractor.py  cli.py  indexer.py  query_engine.py  types.py
build-scripts/: build-linux.sh  build-macos.sh
examples/: basic_usage.py  batch_query.py  json_output.py
indexer/: README.md
indexer/src/: call-extractor.ts  cli.ts  index.ts  indexer.ts  json-formatter.ts  parser.ts  query-engine.ts  types.ts
move_fcg_analyzer/: __init__.py  analyzer.py  cli.py
scripts/: build_local.sh  test_install.sh
src/: scanner.c
test/caas-framework/: Move.toml
test/caas-framework/sources/: authorization.move  context.move  identity.move  label.move  namespace.move  passkey.move  two-step-transfer.move  witness.move
