[package]
name = "tree-sitter-move"
description = "Move grammar for tree-sitter with FCG analysis"
version = "0.0.1"
license = "Apache-2.0"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "move"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/giraffexiu/move-fcg-analyzer"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = ["bindings/rust/*", "grammar.js", "queries/*", "src/*"]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter = ">=0.22.6"

[build-dependencies]
cc = "1.0.87"
