[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "move-fcg-analyzer"
version = "1.0.5"
description = "Move language parser and function call graph analyzer"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "Apache-2.0"}
authors = [
    {name = "ArArgon", email = "liaozping@gmail.com"}
]
keywords = ["move", "aptos", "parser", "tree-sitter", "static-analysis"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "tree-sitter>=0.20.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/move-fcg-analyzer"
Repository = "https://github.com/yourusername/move-fcg-analyzer"
Issues = "https://github.com/yourusername/move-fcg-analyzer/issues"

[project.scripts]
move-fcg-analyzer = "move_fcg_analyzer.cli:main"

[tool.setuptools]
packages = ["move_fcg_analyzer"]
include-package-data = true

[tool.setuptools.package-data]
move_fcg_analyzer = [
    "py.typed",
    "dist/src/*.js",
    "dist/src/*.d.ts",
    "dist/src/*.map",
    "build/Release/*.node"
]
