[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "move-fcg-analyzer"
version = "1.0.6"
description = "Move 项目索引与函数调用图分析的轻量 Python 库"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "tree-sitter>=0.20.0",
]

[project.scripts]
move-fcg-analyzer = "move_fcg_analyzer.cli:main"

[tool.setuptools.packages.find]
where = [".", "bindings/python"]
include = ["move_fcg_analyzer*", "tree_sitter_move_on_aptos*"]

[tool.setuptools.package-data]
tree_sitter_move_on_aptos = ["*.pyi", "py.typed"]

[tool.cibuildwheel]
# Build for CPython 3.8 through 3.12
build = "cp38-* cp39-* cp310-* cp311-* cp312-*"

# Skip PyPy builds (not needed for this project)
skip = "pp*"

# Set build verbosity for debugging
build-verbosity = 1

# Support musllinux for broader Linux compatibility
[tool.cibuildwheel.linux]
musllinux-x86_64-image = "musllinux_1_1"
musllinux-aarch64-image = "musllinux_1_1"
