[build-system]
requires = ["setuptools>=45", "wheel", "setuptools-scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "move-fcg-analyzer"
version = "1.0.9"
description = "Move 项目索引与函数调用图分析的轻量 Python 库"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
  "tree-sitter>=0.20.0",
]

[project.scripts]
move-fcg-analyzer = "move_fcg_analyzer.cli:main"

[tool.setuptools.packages.find]
where = [".", "bindings/python"]
include = ["move_fcg_analyzer*", "tree_sitter_move_on_aptos*"]

[tool.setuptools.package-data]
tree_sitter_move_on_aptos = ["*.pyi", "py.typed"]

[tool.cibuildwheel]
# Build for CPython 3.8 through 3.12
build = "cp38-* cp39-* cp310-* cp311-* cp312-*"

# Skip PyPy builds (not needed for this project)
skip = "pp*"

# Set build verbosity for debugging
build-verbosity = 1

# Linux platform configuration
[tool.cibuildwheel.linux]
# Build for x86_64 architecture with manylinux and musllinux support
# manylinux provides broad compatibility with most Linux distributions
# musllinux provides compatibility with Alpine and other musl-based systems
archs = ["x86_64"]
musllinux-x86_64-image = "musllinux_1_1"

# macOS platform configuration
[tool.cibuildwheel.macos]
# Build for both Intel (x86_64) and Apple Silicon (arm64) architectures
archs = ["x86_64", "arm64"]
